Fix StatsCounter spacing issue with margins

--- a/client/src/components/StatsCounter.module.css
+++ b/client/src/components/StatsCounter.module.css
@@ -35,6 +35,7 @@
     color: #4ade80;
     /* Green */
     font-weight: 700;
+    margin: 0 6px;
 }
 
 .separator {
